[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/scenes/target_info.gd" type="Script" id=1]
[ext_resource path="res://ui/textures/stat_bar.png" type="Texture" id=2]
[ext_resource path="res://ui/textures/stat_bar_fill.png" type="Texture" id=3]
[ext_resource path="res://fonts/m5x7.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[node name="TargetInfo" type="Node2D"]
script = ExtResource( 1 )

[node name="HPBar" type="TextureProgress" parent="."]
visible = false
modulate = Color( 0.992157, 0.258824, 0.258824, 1 )
margin_left = 5.00001
margin_top = 17.0
margin_right = 853.0
margin_bottom = 130.0
rect_scale = Vector2( 0.085, 0.085 )
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )
texture_progress_offset = Vector2( 1, 3 )
radial_fill_degrees = 180.0
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPLabel" type="Label" parent="."]
visible = false
margin_left = 19.0
margin_top = 18.0
margin_right = 99.0
margin_bottom = 32.0
rect_scale = Vector2( 0.55, 0.55 )
custom_fonts/font = SubResource( 2 )
text = "100/100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
margin_left = 10.0
margin_top = 7.0
margin_right = 100.0
margin_bottom = 20.0
rect_scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="HBoxContainer"]
margin_right = 32.0
margin_bottom = 13.0
size_flags_horizontal = 2
custom_fonts/font = SubResource( 1 )
text = "Player"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel2" type="Label" parent="HBoxContainer"]
margin_left = 42.0
margin_right = 48.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 1 )
text = "-"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="HBoxContainer"]
margin_left = 52.0
margin_right = 90.0
margin_bottom = 13.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "Lv.100"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
